crates/next-custom-transforms/tests/errors/server-actions/client-graph/3/input.js
'use cache'

export const foo = {},
  bar = [1]
